# conditional-perturbation-benchmarking

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  COMPUTE_REQUIREMENTS.md  CONTRIBUTING.md  DATA_DICTIONARY.md  DATA_LICENSE.md  LICENSE  README.md  RELEASE_FILE_MANIFEST.sha256  RELEASE_FILE_MANIFEST.tsv  RELEASE_NOTES_v0.1.1.md  REPRODUCIBILITY.md  RESULTS.md  SECURITY.md  THIRD_PARTY_NOTICES.md  UPSTREAM_PROVENANCE.md  pyproject.toml
.github/workflows/: reproducibility.yml
configs/: benchmark_composition_policy_v1.json  public_run_registry_v1.yaml  training_run_matrix.tsv
crg/: __init__.py  benchmark_composition.py
data/norman/: condition_metrics.tsv  regime_manifest.csv
expected/: EXPECTED_OUTPUT_CHECKSUMS.tsv
results/: RESULT_CHECKSUMS.tsv  composition_anchor_points.tsv  headline_summary.tsv
results/composition/: analysis_record.json  composition_resampling_intervals.tsv  composition_risk_curves.tsv  composition_winners.tsv  focal_seed_sensitivity.tsv  geometry_ablation_model_strata.tsv  geometry_ablation_summary.tsv  metric_sensitivity.tsv  model_condition_metrics_collapsed.tsv  pairwise_crossovers.tsv  ranking_stability.tsv  selection_regret.tsv
scripts/: build_public_result_snapshot.py  plot_benchmark_composition.py  run_benchmark_composition.py  verify_figure_preview.py  verify_public_release.py  verify_public_results.py  verify_release_manifest.py  verify_reproduction.py
tests/: test_benchmark_composition.py  test_figure_preview.py  test_public_results.py
