[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conditional-perturbation-benchmarking"
version = "0.1.1"
description = "Finite-benchmark composition analysis for single-cell perturbation predictors"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "Apache-2.0" }
authors = [
  { name = "Hongmin Li", email = "lihongmin@edu.k.u-tokyo.ac.jp" },
]
dependencies = [
  "matplotlib==3.11.0",
  "numpy==2.4.6",
  "pandas==2.3.3",
  "pillow==12.3.0",
  "scipy==1.17.1",
]

[dependency-groups]
dev = ["pytest==9.1.1"]

[project.urls]
Repository = "https://github.com/Li-Hongmin/conditional-perturbation-benchmarking"

[tool.hatch.build.targets.wheel]
packages = ["crg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
cache_dir = ".pytest_cache"
